# Epitech-Paint

./: CMakeLists.txt  main.cpp
include/: core.hpp  frames.hpp  renderer.hpp
src/: frames.cpp  renderer.cpp
